buildscript {
    apply from: "${rootProject.projectDir}/buildSrc/repositories.gradle"
    repositories extRepositories
    apply from: "${rootProject.projectDir}/buildSrc/buildscript-dependencies.gradle"
    dependencies extDependencies
}

group 'com.ra.course'
version '1.0-SNAPSHOT'

configure(allprojects) { project ->

    apply plugin: 'java'
    apply plugin: 'idea'
    apply plugin: "net.saliman.properties"
    apply plugin: 'nebula.optional-base'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'war'

    apply from: "${rootProject.projectDir}/buildSrc/dependencies.gradle"
    apply from: "${rootProject.projectDir}/buildSrc/analyze.gradle"
    sourceCompatibility = 11

    repositories extRepositories

    test {
        useJUnitPlatform {
            excludeTags 'slow'
            includeEngines 'junit-jupiter'
        }
        testLogging {
            events 'PASSED', 'FAILED', 'SKIPPED'
        }
        failFast = false
    }

    dependencies {
        testCompile testing.junit5Engine
        testCompile testing.junit5Api
        testCompile testing.junit5Params
        testCompile testing.mockito
        compile log.log4j2Api
        compile log.log4jCore
        compile log.logbackCore
        compile log.logbackClassic
        compile log.slf4jApi
    }
}

wrapper {
    version = '5.4.1'
}

project(":hotel") {
    dependencies {
        compile db.h2
        compileOnly utils.lombok
        annotationProcessor 'org.projectlombok:lombok:1.18.8'
        compile hibernate.hikari
        compile spring.context
        compile spring.jdbc
    }
}

project(":hotel-integration-test") {
    dependencies {
        compile project(":hotel")
    }
}

project(':developers-team') {
    dependencies {
        compile db.h2
        compile hibernate.hikari
    }
}

project(':developers-team-integration-tests') {
    dependencies {
        compile project(':developers-team')
    }
}
project(':train-tickets') {
    dependencies {
        compile db.h2
        compile hibernate.hikari
    }
}

project(':train-tickets-integration-tests') {
    dependencies {
        compile project(':train-tickets')
    }
}

project(':faculty') {
    dependencies {
        compile db.h2
        compile spring.context
        compile log.log4jDependency
        compile hibernate.hikari
    }
}

project(':faculty-integration-tests') {
    dependencies {
        compile project(':faculty')
    }
}
